# optimization-metaheuristics

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  SECURITY.md  Snake.py  codecov.yml  general.py  plot.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: OPEN_SOURCE_RELEASE_CHECKLIST.md  README.en.md  README.ja.md  README.zh-CN.md  RELEASE_NOTES.en.md  RELEASE_NOTES.ja.md  RELEASE_NOTES.zh-CN.md
examples/: benchmark_functions.py  compare_algorithms.py
final/: GA.py  PSO.py  SA.py
legacy/: Golden_jackal.py  README.md  Whale.py
metaheuristics/: __init__.py  benchmarks.py  problem.py
metaheuristics/algorithms/: __init__.py  base.py  de.py  ga.py  pso.py  sa.py
metaheuristics/utils/: __init__.py  visualization.py
scripts/: run.py
tests/: conftest.py  test_benchmarks.py  test_cli.py  test_de.py  test_ga.py  test_problem.py  test_pso.py  test_sa.py
