[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimization-metaheuristics"
version = "1.2.0"
description = "Metaheuristic optimization algorithms (GA, PSO, SA, DE) for the welded-beam engineering design benchmark"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = [
    "metaheuristics",
    "optimization",
    "genetic-algorithm",
    "particle-swarm-optimization",
    "simulated-annealing",
    "differential-evolution",
    "engineering-design",
    "welded-beam",
    "benchmarks",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["matplotlib>=3.7", "numpy>=1.24", "seaborn>=0.12"]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pre-commit>=3.7",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
metaheuristics-run = "scripts.run:main"

[project.urls]
Homepage = "https://github.com/frankwyf/optimization-metaheuristics"
Repository = "https://github.com/frankwyf/optimization-metaheuristics"
"Bug Tracker" = "https://github.com/frankwyf/optimization-metaheuristics/issues"
Changelog = "https://github.com/frankwyf/optimization-metaheuristics/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["metaheuristics*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-include = ["examples/*.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["metaheuristics"]
omit = ["tests/*", "legacy/*", "final/*"]

[tool.coverage.report]
show_missing = true
